fix: reset button styles (on empty fields)
Description:
  According to challenge, on reset, the reset
  button should be styled as "disable" (see
  design directory).
  In adition, fixed the uneven width of
  "costumize-wrapper" and "calculator-wrapper"

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ main {
   /* height: 490px; */
   height: auto;
   padding: 10px;
-
+  
 
 }
 
@@ -115,7 +115,7 @@ main {
 }
 
 .number-input-wrapper {
-  background-color: brown;
+
   width: 100%;
   height: 50px;
 
@@ -123,7 +123,6 @@ main {
   align-items: center;
 
   border-radius: 7px;
-
 }
 
 
@@ -309,7 +308,7 @@ main {
   height: 50px;
 
   display: flex;
-  margin-top: 20px;
+  margin-top: 18px;
 }
 
 .calc-section > div:first-child {
@@ -337,18 +336,32 @@ main {
 }
 
 
-#reset-button {
-  background-color: hsl(172, 67%, 45%);
+.reset-button {
+  /* background-color: hsl(172, 67%, 45%);
+  color: hsl(183, 100%, 15%); */
+
+  background-color: hsl(182, 73%, 24%);
+  color: hsl(183, 100%, 15%);
+
 
   width: 100%;
   height: 50px;
 
-  margin-top: 30px;
+  margin-top: 10px;
   border-radius: 8px;
   border-style: none;
-  color: hsl(183, 100%, 15%);
+  
   font-family: 'Space Mono', serif;
   font-size: 24px;
+}
+
+#reset-button:hover {
+  cursor: pointer;
+}
+
+.enabled-reset-button {
+  background-color: hsl(172, 67%, 45%);
+  color: hsl(183, 100%, 15%);
 }
 
 
@@ -395,12 +408,14 @@ main {
   
     display: flex;
     flex-direction: row;
-    gap: 30px;
+    justify-content: space-between;
+    /* gap: 30px; */
   }
   
   #costumize-wrapper {
-    width: 520px;
-    /* height: 450px; */
+
+    width: 425px;
+
     height: auto;
     padding: 10px;
 
@@ -473,13 +488,18 @@ main {
   }
 
   #calculator-wrapper {
-    width: 430px;
-    /* height: 440px; */
+
+    width: 425px;
+
     height: auto;
     padding: 35px;
     position: relative;
 
     margin-top: 0px;
+
+    display: flex;
+    justify-content: space-between;
+
   }
   
   .calc-section {
@@ -506,11 +526,9 @@ main {
     margin-top: 50px;
   }
   
-  #reset-button {
+  .reset-button {
     margin-top: 0px;
-    position: absolute;
-    bottom: 35px;
-    width: 320px;
+    width: 100%;
   }
 
   #reset-button:hover {
